--- a/pos-print/build.gradle
+++ b/pos-print/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-  ext.kotlin_version = '1.1.1'
+  ext.kotlin_version = '1.2.71'
   repositories {
     mavenCentral()
     jcenter()
@@ -51,6 +51,9 @@ dependencies {
   compile 'com.google.inject.extensions:guice-servlet:3.0'
   compile 'com.google.guava:guava:19.0'
 
+  //Apache commons
+  compile 'commons-io:commons-io:2.5'
+
   // Internal version of Sitebricks
   compile('org.mvel:mvel2:2.1.3.Final')
   compile('org.jsoup:jsoup:1.8.1')
@@ -83,11 +86,14 @@ dependencies {
   compile 'org.slf4j:slf4j-api:1.6.3'
   compile 'ch.qos.logback:logback-classic:0.9.30'
 
+  //GuavaServices
+  compile group: 'com.google.guava', name: 'guava', version: '19.0'
+
   //MongoDatabase
-  compile 'org.mongodb:mongodb-driver:3.4.2'
+  compile 'org.mongodb:mongodb-driver:3.6.4'
 
   //FongoDatabase
-  compile 'com.github.fakemongo:fongo:2.0.9'
+  compile 'com.github.fakemongo:fongo:2.2.0-RC2'
 
   compile 'com.github.spullara.cli-parser:cli-parser:1.1.2'
   compile 'com.google.code.gson:gson:2.8.0'
